[gd_scene load_steps=5 format=2]

[ext_resource path="res://Wall.gd" type="Script" id=1]
[ext_resource path="res://art/brick_wall.jpeg" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 70 )

[node name="Cell" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Corner" type="Sprite" parent="."]
visible = false
position = Vector2( 10, 10 )
rotation = 1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="UpBody" type="StaticBody2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="UpCollisionShape" type="CollisionShape2D" parent="UpBody"]
position = Vector2( 70, 10 )
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Up" type="Sprite" parent="UpBody"]
position = Vector2( 70, 10 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 140, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftBody" type="StaticBody2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LeftBody"]
position = Vector2( 10, 70 )
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="Sprite" parent="LeftBody"]
position = Vector2( 10, 70 )
rotation = 1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 140, 20 )
__meta__ = {
"_edit_group_": true
}
